# 30DayChartChallenge

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: deploy.yml
src/: index.md
src/2026/mosaic/: titanic.html
src/2026/part-to-whole/: __main__.py  data.py  languages_total.csv
src/2026/pictogram/: __main__.py
src/2026/reporters-without-borders/: RWB_PFI_SCORE.csv  __main__.py
src/2026/slope/: __main__.py  ai-excitement.csv
