[project]
name = "30daychartchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "drawarrow>=0.1.0",
  "geopandas>=1.1.3",
  "highlight-text>=0.2",
  "matplotlib>=3.10.8",
  "polars>=1.39.3",
  "pyarrow>=23.0.1",
  "pyfonts>=1.3.0",
  "pypalettes>=0.2.1",
  "pywaffle>=1.1.1",
  "squarify>=0.4.4",
]
